--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASS=1600one123
+
+
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=jeecee191@gmail.com
+MAIL_PASSWORD=2023Kinzang@Yega
+MAIL_USE_TLS=False
+MAIL_USE_SSL=True
