--- a/.env
+++ b/.env
@@ -2,11 +2,10 @@
 DEBUG=True
 SECRET_KEY=S3cr3t_K#Key
 DB_ENGINE=postgresql
-DB_NAME=student_db
+DB_NAME=student_management_system
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-<<<<<<< HEAD
 DB_PASS=1600one123
 
 
@@ -16,6 +15,3 @@ MAIL_USERNAME=jeecee191@gmail.com
 MAIL_PASSWORD=2023Kinzang@Yega
 MAIL_USE_TLS=False
 MAIL_USE_SSL=True
-=======
-DB_PASS=secret
->>>>>>> 753ff58a7b5d2afa5543ee4dddb5bbeb8afa1d56
