--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 DEBUG=True
 SECRET_KEY=S3cr3t_K#Key
 DB_ENGINE=postgresql
-DB_NAME=student_management_system
+DB_NAME=student_db
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASS=1600one123
+DB_PASS=secret
 
 
 MAIL_SERVER=smtp.gmail.com
